android: allow AIR 32 signer on modular Java